# uxadt

./: README.md  composer.json  release.sh  uxadt.js
Haskell/: LICENSE  release.sh  uxadt.cabal
Haskell/Data/: UxADT.hs
Haskell/Data/UxADT/: Examples.hs
Haskell/Text/: README.md  UXADT.hs
JavaScript/: README.md  package.json
JavaScript/examples/: examples.html  examples.js
JavaScript/lib/: examples.js  overview.js  runtests.sh  uxadt.js
JavaScript/lib/tests/: advtypes.js  basictypes.js  internaldatatypes.js  patterns.js  tree.js
PHP/: README.txt  composer.json  composer.phar  package.xml  release.sh  uxadt-0.0.10.tgz  uxadt-0.0.11.tgz  uxadt-0.0.12.tgz  uxadt-0.0.14.tgz  uxadt-0.0.15.tgz  uxadt.php
PHP/examples/: examples.php
PHP/src/: uxadt.php
PHP/uxadt/: package.xml  uxadt-0.0.6.tgz  uxadt-0.0.8.tgz  uxadt.php
Python/: MANIFEST  README.TXT  README.md  README.txt  setup.py
Python/examples/: examples.py
Python/uxadt/: __init__.py  uxadt.py
hs/: .gitignore
hs/Data/: UxADT.hs
js/: LICENSE  README.md  package.json  release.sh
js/examples/: examples.html  examples.js
js/lib/: uxadt.js
js/test/: test.js
php/: release.sh  uxadt-0.0.16.tgz
php_/: README.txt  uxadt.php
py/: LICENSE  README.rst  release.sh  setup.py
py/examples/: examples.py
py/uxadt/: uxadt.py
py/uxadt/tests/: test_uxadt.py
