Name:              uxadt
Version:           0.0.0.1
Synopsis:          Cross-language extensible representation for algebraic data types.
Description:       Universal (cross-language) extensible representation for algebraic data type instances.
Category:          Text
License:           GPL
Author:            Andrei Lapets
Maintainer:        Andrei Lapets <lapets@bu.edu>
Build-Type:        Simple
Cabal-Version:     >= 1.2

library
  Exposed-Modules: Text.UXADT
  Build-Depends:   base >= 3 && < 5, MissingH